<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/AppHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginTop="@dimen/app_heading_top_margin"
        android:padding="@dimen/item_padding"
        android:text="@string/app_settings"
        android:textColor="@color/light_grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_app_theme"
        style="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_setting_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/MediumHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/app_theme" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_app_theme"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_layout_type"
        style="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="74dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_app_theme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/MediumHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/layout_type" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_layout_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_font_family"
        style="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="74dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_layout_type">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                style="@style/MediumHeading"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/font_family" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_font_family"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginTop="@dimen/app_heading_top_margin"
        android:padding="@dimen/item_padding"
        android:text="@string/product"
        android:textColor="@color/light_grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_font_family" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_github"
        style="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_title">


        <TextView
            style="@style/MediumHeading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/visit_github" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_privacy_policy"
        style="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_github">

        <TextView
            style="@style/MediumHeading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>